syntax = "proto3";

package ping;

option go_package = "pkg/packets/ping";

message PingRequest {
  int64 clientTime = 1;
}

message PingResponse {
  int64 clientTime = 1;
  int64 serverTime = 2;
}