syntax = "proto3";

package shared;

option go_package = "pkg/packets/shared";

enum PacketType {
    UNKNOWN = 0;
    PING_REQUEST = 1;
    PING_RESPONSE = 2;
    PLAYER_ACTION = 3;
    GAME_STATE_UPDATE = 4;
}

message Envelope {
    PacketType type = 1;
    bytes payload = 2;
}